src/objects/Object_Usage__c.object
<CustomObject>
    <description>Object used internally in the CRM team to keep track of which objects are used with each country and SBU</description>
    <fields>
        <fullName>Adoption_Status__c</fullName>
        <label>Adoption Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Used</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Country</description>
        <inlineHelpText>Lookup to Countries</inlineHelpText>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipName>Objects_Usage</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Feature_Type__c</fullName>
        <label>Feature Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce.com Platform</fullName>
                </value>
                <value>
                    <fullName>Sales Cloud</fullName>
                </value>
                <value>
                    <fullName>Service Cloud</fullName>
                </value>
                <value>
                    <fullName>Marketing Cloud</fullName>
                </value>
                <value>
                    <fullName>External Application</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Object_Feature__c</fullName>
        <label>Object/Feature</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account Receivables</fullName>
                </value>
                <value>
                    <fullName>Accounts</fullName>
                </value>
                <value>
                    <fullName>Activities</fullName>
                </value>
                <value>
                    <fullName>Assets</fullName>
                </value>
                <value>
                    <fullName>AX Delivery Address setup</fullName>
                </value>
                <value>
                    <fullName>Campaigns</fullName>
                </value>
                <value>
                    <fullName>Cases</fullName>
                </value>
                <value>
                    <fullName>Consignment Stock</fullName>
                </value>
                <value>
                    <fullName>Contacts</fullName>
                </value>
                <value>
                    <fullName>Contracts</fullName>
                </value>
                <value>
                    <fullName>Corporate System</fullName>
                </value>
                <value>
                    <fullName>Dealer Data</fullName>
                </value>
                <value>
                    <fullName>Duplicate Management</fullName>
                </value>
                <value>
                    <fullName>Einstein Analytics (Wave)</fullName>
                </value>
                <value>
                    <fullName>Eloqua Integration</fullName>
                    <isActive>false</isActive>
                    <label>Eloqua Integration</label>
                </value>
                <value>
                    <fullName>ETM</fullName>
                </value>
                <value>
                    <fullName>GDW Integration</fullName>
                </value>
                <value>
                    <fullName>GeoPointe</fullName>
                </value>
                <value>
                    <fullName>Homepage</fullName>
                </value>
                <value>
                    <fullName>Internal Orders</fullName>
                </value>
                <value>
                    <fullName>Item Specifications</fullName>
                </value>
                <value>
                    <fullName>Leads</fullName>
                </value>
                <value>
                    <fullName>Locations</fullName>
                </value>
                <value>
                    <fullName>Marketing Cloud</fullName>
                </value>
                <value>
                    <fullName>Networks</fullName>
                </value>
                <value>
                    <fullName>Opportunities</fullName>
                </value>
                <value>
                    <fullName>Orders</fullName>
                </value>
                <value>
                    <fullName>Product Profiling</fullName>
                </value>
                <value>
                    <fullName>Products</fullName>
                </value>
                <value>
                    <fullName>Service Console</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Object_feature_sub_type__c</fullName>
        <label>Object/feature sub-type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Object_Feature__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GET AP</fullName>
                    <label>IMPL GET AP</label>
                </value>
                <value>
                    <fullName>GROW AP</fullName>
                    <label>IMPL GROW AP</label>
                </value>
                <value>
                    <fullName>Trial &amp; Tender</fullName>
                </value>
                <value>
                    <fullName>X-SBU opp</fullName>
                </value>
                <value>
                    <fullName>ORTH  Top 20 Mgmt</fullName>
                </value>
                <value>
                    <fullName>Service Complaints</fullName>
                </value>
                <value>
                    <fullName>CRM Requests</fullName>
                </value>
                <value>
                    <fullName>Credits and Rebills</fullName>
                </value>
                <value>
                    <fullName>Return Authorizations</fullName>
                </value>
                <value>
                    <fullName>Manual updates</fullName>
                </value>
                <value>
                    <fullName>Integrated updates</fullName>
                </value>
                <value>
                    <fullName>Eloqua</fullName>
                </value>
                <value>
                    <fullName>Global eCommerce</fullName>
                </value>
                <value>
                    <fullName>LMS (Success Factors)</fullName>
                </value>
                <value>
                    <fullName>Cvent</fullName>
                </value>
                <value>
                    <fullName>Nazareé</fullName>
                </value>
                <value>
                    <fullName>CIM</fullName>
                </value>
                <value>
                    <fullName>Account Plan</fullName>
                </value>
                <value>
                    <fullName>GeoPointe</fullName>
                </value>
                <value>
                    <fullName>Einstein Analytics</fullName>
                </value>
                <value>
                    <fullName>Ingenious</fullName>
                </value>
                <value>
                    <fullName>Marketing Cloud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBU__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup field to SBU Information object in SFDC</description>
        <label>SBU</label>
        <referenceTo>SBU_Information__c</referenceTo>
        <relationshipName>Objects_Usage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Used to state if this object/feature is in use, not in use but possible to get if needed and time to deploy, not possible to get for some reason - e.g. can&apos;t get a sales integration becasue sales not available in GDW</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Use</fullName>
                </value>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Not Possible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Feature</label>
    <nameField>
        <label>Feature name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>